--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 
     package="com.jey_dev.lib.dialog">
 
-    <application
-        android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
+    <!--<application-->
+        <!--android:allowBackup="true"-->
+        <!--android:label="@string/app_name"-->
+        <!--android:supportsRtl="true">-->
 
-    </application>
+    <!--</application>-->
 
 </manifest>
